Avoid disconnect message overlapping the owl.

--- a/flybywire/flybywire.css
+++ b/flybywire/flybywire.css
@@ -78,6 +78,7 @@ h1 {
 
 #disconnect-message {
 	margin-bottom: 20px;
+	text-align: center;
 }
 
 canvas {
